no.3/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: company-gateway
spec:
  gatewayClassName: eg
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.company.local"
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.company.local"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: company-local-tls
    allowedRoutes:
      namespaces:
        from: Same
